@@ -5,6 +5,7 @@ Changes in JMurmel-1.4 relative to JMurmel-1.3
  * removed the undocumented function "fatal" from Murmel,
    moved the function "error" from mlib to Murmel and now it is similar to CL's "error"
  * added the function "read-from-string"
+ * added the global variable *condition-handler*
 
 
 Changes in JMurmel-1.3 relative to JMurmel-1.2.2
